# robotoy

./: .gitignore  1.py  2.py  CMakeLists.txt  README.md  itp_state.cpp  itp_state.py  setup.py  test.py  test2.py
container/: ring_buffer.cpp
container/tests/: test_ring_buffer.py
counter/: __init__.py
counter/tests/: test_fps_counter.py
fast_math/container/tests/: test_ring_buffer.py
fast_math/itp_state/tests/: test_package.py
fast_math/kalman/: linear_kalman.py
itpltn/: itp_state.py
kalman/: 3.ipynb  linear_kalman.py
robotoy/itp_state/tests/: test_package.py
robotoy/kalman/: linear_kalman.py
robotoy/kalman/kalman-filter-cpp/: CMakeLists.txt  kalman.hpp  test.cpp
robotoy/pipe/: __init__.py  pipe_v2.py
robotoy/time_utils/: __init__.py
robotoy/ziglike/: test.py
